--- a/Paraphraser_v10.ipynb
+++ b/Paraphraser_v10.ipynb
@@ -88,13 +88,13 @@
         "6.  Nel testo input troverai placeholders del tipo IMGP(NumPag)xI(IdxImg). Questi rappresentano immagini e sono già stati posizionati nel flusso del testo in base all'ordine degli elementi (testo/immagini) nel documento PDF originale.\n",
         "7.  Il tuo compito è:\n",
         "    a. Parafrasare il testo che si trova *attorno* a questi placeholder.\n",
-        "    b. **MANTENERE il placeholder ESATTO (es. IMGP1xI1) e lasciarlo NELLA POSIZIONE RELATIVA in cui lo trovi rispetto al testo circostante.** Non spostarlo altrove. Verrà sostituito dopo con il tag immagine corretto.\n",
+        "    b. MANTENERE il placeholder ESATTO (es. IMGP1xI1) e lasciarlo NELLA POSIZIONE RELATIVA in cui lo trovi rispetto al testo circostante. Non spostarlo altrove. Verrà sostituito dopo con il tag immagine corretto.\n",
         "8.  NON inventare o aggiungere ALTRI placeholders IMGP...xI....\n",
         "\n",
         "Gestione Tabelle, Valuta, Formattazione, Errori:\n",
         "9.  Tabelle (FORMATTAZIONE MARKDOWN con Spaziatura):\n",
         "    - Se identifichi una tabella, FAI DEL TUO MEGLIO PER RICOSTRUIRLA in MARKDOWN STANDARD: usa il carattere pipe (|) per separare le colonne e una riga separatrice composta da trattini e pipe (es. |---|---|...). Preserva tutti i dati.\n",
-        "    - **IMPORTANTE:** Assicurati che ci sia SEMPRE **una riga vuota (un \"a capo\" extra)** sia PRIMA della prima riga della tabella (quella con gli header) sia DOPO l'ultima riga della tabella, per separarla correttamente dal testo circostante.\n",
+        "    - IMPORTANTE: Assicurati che ci sia SEMPRE una riga vuota (un \"a capo\" extra) sia PRIMA della prima riga della tabella (quella con gli header) sia DOPO l'ultima riga della tabella, per separarla correttamente dal testo circostante.\n",
         "    - Esempio di output corretto nel Markdown (nota le righe vuote immaginarie prima e dopo):\n",
         "\n",
         "      Testo che precede la tabella.\n",
@@ -112,15 +112,16 @@
         "13. Indica testo illeggibile scrivendo esattamente [TESTO ILLEGGIBILE].\n",
         "14. Gestione FORMULE e NOTAZIONI SCIENTIFICHE (SOLO LaTeX, NIENTE Backticks!):\n",
         "    - NON modificare il contenuto interno delle formule.\n",
-        "    - Usa ESCLUSIVAMENTE i delimitatori LaTeX standard: `$ ... $` per formule inline, `$$ ... $$` per formule display.\n",
-        "    - IMPORTANTISSIMO: NON USARE MAI i backtick (\\`) per la matematica. I backtick sono SOLO per il codice (es. `var=5`). Usa sempre e solo `$formula$` o `$$formula$$`.\n",
-        "    - Parafrasa solo il testo attorno alle formule, lasciando la formula e i suoi delimitatori `$`/`$$` intatti.\n",
+        "    - Usa ESCLUSIVAMENTE i delimitatori LaTeX standard: $ ... $ per formule inline, $$ ... $$ per formule display.\n",
+        "    - IMPORTANTISSIMO: NON USARE MAI i backtick (`) per la matematica. I backtick sono SOLO per il codice (es. `var=5`). Usa sempre e solo $formula$ o $$formula$$.\n",
+        "    - Parafrasa solo il testo attorno alle formule, lasciando la formula e i suoi delimitatori $/$$ intatti.\n",
         "    - Non inventare formule. Esempi corretti nel Markdown finale: La relazione $p^M = a - bx^M(T)$ è importante. La famosa equazione è $$E=mc^2$$.\n",
         "15. Gestione Specifica Valuta Dollaro (IMPORTANTE): Se devi usare il simbolo dollaro USA per valuta (esempio: 120 dollari), USA SEMPRE una barra rovesciata seguita dal simbolo dollaro (\\$) nel Markdown. Esempio: Il prezzo è 120\\$.\n",
         "16. Restrizioni Aggiuntive sull'Output:\n",
         "    - NON generare MAI linee orizzontali di separazione (usando ---, ***, o ___).\n",
         "    - NON fare MAI riferimento ai numeri di pagina o alla struttura del documento originale nel testo parafrasato.\n",
-        "17. Output Finale: Produci UNICAMENTE il testo Markdown risultante dalla parafrasi. Deve contenere: placeholders IMGP... (posizionati correttamente nel flusso), tabelle Markdown corrette e **spaziate con righe vuote prima e dopo**, formule LaTeX corrette ($ o $$, NO backticks), valuta \\$ corretta. NON includere: titoli aggiuntivi, header, footer, commenti, linee orizzontali, o altro testo non richiesto.\n",
+        "17. Output Finale: Produci UNICAMENTE il testo Markdown risultante dalla parafrasi. Deve contenere: placeholders IMGP... (posizionati correttamente nel flusso), tabelle Markdown corrette e spaziate con righe vuote prima e dopo, formule LaTeX corrette ($ o $$, NO backticks), valuta \\$ corretta. NON includere: titoli aggiuntivi, header, footer, commenti, linee orizzontali, o altro testo non richiesto.\n",
+        "18. Scrivi nella lingua del testo originale.\n",
         "\"\"\"\n",
         "\n",
         "# --- 5. Funzioni di Utilità ---\n",
@@ -516,15 +517,20 @@
           "height": 1000
         },
         "id": "y3O6UDSk94rY",
-        "outputId": "79d9cbd1-18f7-497d-f7ba-e834d1cd6571"
+        "outputId": "d5560648-4d92-42d5-dd49-e79c328c3cc9"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "API Key Gemini caricata con successo.\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m155.4/155.4 kB\u001b[0m \u001b[31m4.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m20.0/20.0 MB\u001b[0m \u001b[31m66.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.2/13.2 MB\u001b[0m \u001b[31m103.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m59.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hAPI Key Gemini caricata con successo.\n",
             "Modello richiesto: gemini-2.5-flash-preview-04-17\n",
             "Configurazione generazione: {'temperature': 0.6, 'top_p': 0.95, 'top_k': 64, 'max_output_tokens': 60000, 'response_mime_type': 'text/plain'}\n",
             "Tentativo inizializzazione modello: gemini-2.5-flash-preview-04-17\n",
@@ -552,9 +558,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-fbcbd2d4-1736-4c5f-a4d0-d2674c31109f\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-e5019387-5aff-49a1-bbf0-797f0b919041\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-fbcbd2d4-1736-4c5f-a4d0-d2674c31109f\">\n",
+              "     <output id=\"result-e5019387-5aff-49a1-bbf0-797f0b919041\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -742,27 +748,77 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving R-Politica economica-Motolese (2)-1-10.pdf to R-Politica economica-Motolese (2)-1-10.pdf\n",
-            "File PDF 'R-Politica economica-Motolese (2)-1-10.pdf' caricato (466260 bytes).\n",
-            "Cartella Output: /content/drive/MyDrive/Appunti TopNotes/markdown/R-Politica economica-Motolese (2)-1-10_20250420_212644\n",
-            "File Markdown: /content/drive/MyDrive/Appunti TopNotes/markdown/R-Politica economica-Motolese (2)-1-10_20250420_212644/R-Politica economica-Motolese (2)-1-10_20250420_212644_parafrasato.md\n",
-            "Cartella Immagini: /content/drive/MyDrive/Appunti TopNotes/markdown/R-Politica economica-Motolese (2)-1-10_20250420_212644/Images\n",
-            "Logo Destinazione: /content/drive/MyDrive/Appunti TopNotes/markdown/R-Politica economica-Motolese (2)-1-10_20250420_212644/Images/logo.jpg\n",
+            "Saving R-Macroeconomia-Femminis (1).pdf to R-Macroeconomia-Femminis (1).pdf\n",
+            "File PDF 'R-Macroeconomia-Femminis (1).pdf' caricato (17192875 bytes).\n",
+            "Cartella Output: /content/drive/MyDrive/Appunti TopNotes/markdown/R-Macroeconomia-Femminis (1)_20250421_090547\n",
+            "File Markdown: /content/drive/MyDrive/Appunti TopNotes/markdown/R-Macroeconomia-Femminis (1)_20250421_090547/R-Macroeconomia-Femminis (1)_20250421_090547_parafrasato.md\n",
+            "Cartella Immagini: /content/drive/MyDrive/Appunti TopNotes/markdown/R-Macroeconomia-Femminis (1)_20250421_090547/Images\n",
+            "Logo Destinazione: /content/drive/MyDrive/Appunti TopNotes/markdown/R-Macroeconomia-Femminis (1)_20250421_090547/Images/logo.jpg\n",
             "Cartelle Drive create/verificate.\n",
             "\n",
             "--- 4. Estrazione Contenuto PDF (con Analisi Layout) ---\n",
             "Avvio estrazione testo/immagini PDF con analisi layout (get_text dict)...\n",
-            "PDF caricato. Pagine: 10\n",
-            "Estrazione PDF con analisi layout completata. Img temp referenziate: 5.\n",
+            "PDF caricato. Pagine: 105\n",
+            "Estrazione PDF con analisi layout completata. Img temp referenziate: 155.\n",
             "Documento PyMuPDF chiuso.\n",
-            "Estrazione PDF con Analisi Layout completata. Pagine: 10. Img PDF iniziali: 5\n",
+            "Estrazione PDF con Analisi Layout completata. Pagine: 105. Img PDF iniziali: 155\n",
             "\n",
             "--- 5. Parafrasi Testo con Gemini (gemini-2.5-flash-preview-04-17) ---\n",
-            "Divisione in 1 chunk da 10 pagine (circa).\n",
+            "Divisione in 11 chunk da 10 pagine (circa).\n",
             "\n",
-            "  Processando CHUNK_1/1...\n",
+            "  Processando CHUNK_1/11...\n",
             "      Tentativo 1/3 invio chunk 'CHUNK_1' a Gemini (gemini-2.5-flash-preview-04-17)...\n",
             "      Chunk 'CHUNK_1' parafrasato(T1).(Completato)\n",
+            "      ...Pausa 1.5s...\n",
+            "\n",
+            "  Processando CHUNK_2/11...\n",
+            "      Tentativo 1/3 invio chunk 'CHUNK_2' a Gemini (gemini-2.5-flash-preview-04-17)...\n",
+            "      Chunk 'CHUNK_2' parafrasato(T1).(Completato)\n",
+            "      ...Pausa 1.5s...\n",
+            "\n",
+            "  Processando CHUNK_3/11...\n",
+            "      Tentativo 1/3 invio chunk 'CHUNK_3' a Gemini (gemini-2.5-flash-preview-04-17)...\n",
+            "      Chunk 'CHUNK_3' parafrasato(T1).(Completato)\n",
+            "      ...Pausa 1.5s...\n",
+            "\n",
+            "  Processando CHUNK_4/11...\n",
+            "      Tentativo 1/3 invio chunk 'CHUNK_4' a Gemini (gemini-2.5-flash-preview-04-17)...\n",
+            "      Chunk 'CHUNK_4' parafrasato(T1).(Completato)\n",
+            "      ...Pausa 1.5s...\n",
+            "\n",
+            "  Processando CHUNK_5/11...\n",
+            "      Tentativo 1/3 invio chunk 'CHUNK_5' a Gemini (gemini-2.5-flash-preview-04-17)...\n",
+            "      Chunk 'CHUNK_5' parafrasato(T1).(Completato)\n",
+            "      ...Pausa 1.5s...\n",
+            "\n",
+            "  Processando CHUNK_6/11...\n",
+            "      Tentativo 1/3 invio chunk 'CHUNK_6' a Gemini (gemini-2.5-flash-preview-04-17)...\n",
+            "      Chunk 'CHUNK_6' parafrasato(T1).(Completato)\n",
+            "      ...Pausa 1.5s...\n",
+            "\n",
+            "  Processando CHUNK_7/11...\n",
+            "      Tentativo 1/3 invio chunk 'CHUNK_7' a Gemini (gemini-2.5-flash-preview-04-17)...\n",
+            "      Chunk 'CHUNK_7' parafrasato(T1).(Completato)\n",
+            "      ...Pausa 1.5s...\n",
+            "\n",
+            "  Processando CHUNK_8/11...\n",
+            "      Tentativo 1/3 invio chunk 'CHUNK_8' a Gemini (gemini-2.5-flash-preview-04-17)...\n",
+            "      Chunk 'CHUNK_8' parafrasato(T1).(Completato)\n",
+            "      ...Pausa 1.5s...\n",
+            "\n",
+            "  Processando CHUNK_9/11...\n",
+            "      Tentativo 1/3 invio chunk 'CHUNK_9' a Gemini (gemini-2.5-flash-preview-04-17)...\n",
+            "      Chunk 'CHUNK_9' parafrasato(T1).(Completato)\n",
+            "      ...Pausa 1.5s...\n",
+            "\n",
+            "  Processando CHUNK_10/11...\n",
+            "      Tentativo 1/3 invio chunk 'CHUNK_10' a Gemini (gemini-2.5-flash-preview-04-17)...\n",
+            "      Chunk 'CHUNK_10' parafrasato(T1).(Completato)\n",
+            "      ...Pausa 1.5s...\n",
+            "\n",
+            "  Processando CHUNK_11/11...\n",
+            "      Tentativo 1/3 invio chunk 'CHUNK_11' a Gemini (gemini-2.5-flash-preview-04-17)...\n",
+            "      Chunk 'CHUNK_11' parafrasato(T1).(Completato)\n",
             "\n",
             "--- Parafrasi chunk completata ---\n",
             "Parafrasi chunk completata senza errori API apparenti.\n",
@@ -772,34 +828,34 @@
             "\n",
             "--- 7. Pulizia Spaziatura Tabelle Markdown ---\n",
             "  Applicazione post-processing per spaziatura tabelle...\n",
-            "  Aggiunte 1 righe vuote prima e 1 dopo le tabelle.\n",
+            "  Aggiunte 3 righe vuote prima e 3 dopo le tabelle.\n",
             "\n",
             "--- 8. Filtro Immagini PDF e Copia Logo Fisso su Drive ---\n",
             "\n",
             "--- Filtro Immagini Vuote/Nere (dal PDF) e Copia Valide ---\n",
             "Analisi da: /content/temp_pdf_parafrasi_images_v4_13\n",
-            "Copia valide in: /content/drive/MyDrive/Appunti TopNotes/markdown/R-Politica economica-Motolese (2)-1-10_20250420_212644/Images\n",
+            "Copia valide in: /content/drive/MyDrive/Appunti TopNotes/markdown/R-Macroeconomia-Femminis (1)_20250421_090547/Images\n",
             "Soglie: Nero < 10, Bianco > 245\n",
-            "Filtro immagini PDF completato. Valide copiate: 5. Vuote rimosse: 0. Errori: 0.\n",
-            "Placeholders img PDF validi: 5\n",
+            "Filtro immagini PDF completato. Valide copiate: 155. Vuote rimosse: 0. Errori: 0.\n",
+            "Placeholders img PDF validi: 155\n",
             "Placeholders img PDF rimossi: 0\n",
             "  Tentativo copia Logo Header da: /content/drive/MyDrive/Appunti TopNotes/logo/logo.jpg\n",
-            "  Logo Header copiato in: /content/drive/MyDrive/Appunti TopNotes/markdown/R-Politica economica-Motolese (2)-1-10_20250420_212644/Images/logo.jpg\n",
+            "  Logo Header copiato in: /content/drive/MyDrive/Appunti TopNotes/markdown/R-Macroeconomia-Femminis (1)_20250421_090547/Images/logo.jpg\n",
             "\n",
             "--- 9. Post-Elaborazione Markdown Immagini PDF (Sostituzione Placeholder) ---\n",
             "  Sostituzione placeholder img PDF validi...\n",
-            "  Sostituiti 5 placeholder img PDF validi.\n",
+            "  Sostituiti 156 placeholder img PDF validi.\n",
             "  Nessun placeholder img PDF non valido da rimuovere.\n",
             "  Composizione Header finale (Solo Logo Fisso)...\n",
             "  Aggiunto tag per Logo Header: ./Images/logo.jpg\n",
             "\n",
             "--- Controllo Finale Output MD ---\n",
-            "Lunghezza finale MD: 28272 caratteri.\n",
+            "Lunghezza finale MD: 337551 caratteri.\n",
             "------------------------------------\n",
             "\n",
             "\n",
             "--- 11. Salvataggio File Markdown Finale su Drive ---\n",
-            "File Markdown finale salvato con successo in: /content/drive/MyDrive/Appunti TopNotes/markdown/R-Politica economica-Motolese (2)-1-10_20250420_212644/R-Politica economica-Motolese (2)-1-10_20250420_212644_parafrasato.md\n",
+            "File Markdown finale salvato con successo in: /content/drive/MyDrive/Appunti TopNotes/markdown/R-Macroeconomia-Femminis (1)_20250421_090547/R-Macroeconomia-Femminis (1)_20250421_090547_parafrasato.md\n",
             "\n",
             "--- 12. Pulizia ---\n",
             "Rimozione cartella temporanea: /content/temp_pdf_parafrasi_images_v4_13\n",
@@ -807,8 +863,8 @@
             "\n",
             "=============================================\n",
             "--- PROCESSO COMPLETATO CON SUCCESSO ---\n",
-            "File Markdown salvato su Drive in: /content/drive/MyDrive/Appunti TopNotes/markdown/R-Politica economica-Motolese (2)-1-10_20250420_212644/R-Politica economica-Motolese (2)-1-10_20250420_212644_parafrasato.md\n",
-            "Cartella Immagini: /content/drive/MyDrive/Appunti TopNotes/markdown/R-Politica economica-Motolese (2)-1-10_20250420_212644/Images (5 img PDF, Logo trovato: True)\n",
+            "File Markdown salvato su Drive in: /content/drive/MyDrive/Appunti TopNotes/markdown/R-Macroeconomia-Femminis (1)_20250421_090547/R-Macroeconomia-Femminis (1)_20250421_090547_parafrasato.md\n",
+            "Cartella Immagini: /content/drive/MyDrive/Appunti TopNotes/markdown/R-Macroeconomia-Femminis (1)_20250421_090547/Images (155 img PDF, Logo trovato: True)\n",
             "=============================================\n"
           ]
         }
